fixed image styling - now scales with list item expand/collapse

--- a/src/pages/inventory/inventory.scss
+++ b/src/pages/inventory/inventory.scss
@@ -16,13 +16,13 @@
   margin-left: 20px;
 }
 
-.item-expanded{
-  height: 200px;
-}
+// .item-expanded{
+//   height: 200px;
+// }
 
-.attributes{
-  transition: all 1s ease-out;
-}
+// .attributes{
+//   transition: all 1s ease-out;
+// }
 
 .inventory{
   &__content{
@@ -55,6 +55,7 @@
       grid-template-columns: 70% 30%;
       box-shadow: 2px 2px 2px #eee;
       // text-align: center;
+      transition: all 1s ease-out;
 
       &__info{
         pointer-events: none;
@@ -64,13 +65,17 @@
         }
 
         &__figure{
-          height: inherit;
+          position: relative;
+          overflow:auto;
+          height:0;
+          min-height:100%;
           pointer-events: none;
 
           &__image{
+            // margin: 0 auto;
+            position: absolute;
             height: 100%;
-            margin: 0 auto;
-            width: 150px;
+            right: 0;
             display: block;
           }
         }
